--- a/.github/workflows/pat-generator.yml
+++ b/.github/workflows/pat-generator.yml
@@ -17,8 +17,8 @@ jobs:
         id: get_workflow_token
         uses: peter-murray/workflow-application-token-action@v1.3.0
         with:
-          application_id: ${{ secrets.PAT_APP_ID }}
-          application_private_key: ${{ secrets.PAT_APP_PRIVATE_KEY }}
+          application_id: ${{ secrets.GH_APP_ID }}
+          application_private_key: ${{ secrets.GH_APP_PRIVATE_KEY }}
 
       - name: Tag and Release
         uses: avakar/tag-and-release@v1.0.0
